engine-net-2/examples/Errors/IndexTwoUpperBounds.grs
new graph "Rules.grg"

exec for{v:N in {ascending(idx>7,idx>42)}; true}

quit
